Moved code from https://github.com/eWaterCycle/grpc4bmi-examples/tree/master/psfetch to here
Also
* added badges
* use ewatercycle namespace
* have version in single place
* use rtd theme for docs

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,11 +7,11 @@ test=pytest
 
 [coverage:run]
 branch = True
-source = ewatercycle_parametersetdb
+source = ewatercycle.parametersetdb
 
 [tool:pytest]
 testpaths = tests
-addopts = --cov --cov-report xml --cov-report term --cov-report html
+addopts = --cov --cov-report xml --cov-report term --cov-report html --junit-xml=xunit-result.xml
 
 # Define `python setup.py build_sphinx`
 [build_sphinx]
