Hijacked the parametersetdb for ewatercycle package. Also added usgs observation download function

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ test=pytest
 
 [coverage:run]
 branch = True
-source = ewatercycle.parametersetdb
+source = ewatercycle
 
 [tool:pytest]
 testpaths = tests
