Replace Travis CI with GitHub Actions workflow
Fixes #11

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,4 @@
+sonar.organization=ewatercycle
 sonar.projectKey=ewatercycle-parametersetdb
 sonar.sources=ewatercycle/parametersetdb
 sonar.tests=tests
