--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -e .[dev]
-        pip install -r requirements.txt; fi
+        pip install -r requirements.txt
     - name: Test with pytest
       run: pytest --cov --cov-report term --cov-report xml --junitxml=xunit-result.xml
     - name: Correct coverage paths
