--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.sources=ewatercycle/parametersetdb
 sonar.tests=tests
 sonar.language=py
 sonar.python.xunit.reportPath=xunit-result.xml
-sonar.python.coverage.reportPath=coverage.xml
+sonar.python.coverage.reportPaths=coverage.xml
 sonar.links.homepage=https://github.com/eWaterCycle/parametersetdb
 sonar.sourceEncoding=UTF-8
 sonar.host.url=https://sonarcloud.io
