--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,11 +28,4 @@ jobs:
         pip install -e .[dev]
         pip install -r requirements.txt
     - name: Test with pytest
-      run: pytest --cov --cov-report term --cov-report xml --junitxml=xunit-result.xml
-    - name: Correct coverage paths
-      run: sed -i "s+$PWD/++g" coverage.xml
-    - name: SonarCloud Scan
-      uses: sonarsource/sonarcloud-github-action@master
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      run: pytest
