--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,10 +1,10 @@
 sonar.organization=ewatercycle
-sonar.projectKey=ewatercycle-parametersetdb
-sonar.sources=ewatercycle/parametersetdb
+sonar.projectKey=eWaterCycle_ewatercycle
+sonar.sources=ewatercycle/
 sonar.tests=tests
 sonar.language=py
 sonar.python.xunit.reportPath=xunit-result.xml
 sonar.python.coverage.reportPath=coverage.xml
-sonar.links.homepage=https://github.com/eWaterCycle/parametersetdb
+sonar.links.homepage=https://github.com/eWaterCycle/ewatercycle
 sonar.sourceEncoding=UTF-8
 sonar.host.url=https://sonarcloud.io
