--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,12 @@ source = ewatercycle
 
 [tool:pytest]
 testpaths = tests
-addopts = --cov --cov-report xml --cov-report term --cov-report html --junit-xml=xunit-result.xml
+addopts =
+    --cov
+    --cov-report xml
+    --cov-report term
+    --cov-report html
+    --junit-xml=xunit-result.xml
 
 # Define `python setup.py build_sphinx`
 [build_sphinx]
