Replace Travis CI with GitHub Actions workflow + Correct sonarcloud analysis (#13)
* Replace Travis CI with GitHub Actions workflow

Fixes #11

* nofi

* Track coverage with sonarcloud

* Setup sonarcloud on renamed repo + split sonarcloud analysis into own ci workflow

* Update SonarCloud badges

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,10 @@
-sonar.projectKey=ewatercycle-parametersetdb
-sonar.sources=ewatercycle/parametersetdb
+sonar.organization=ewatercycle
+sonar.projectKey=eWaterCycle_ewatercycle
+sonar.sources=ewatercycle/
 sonar.tests=tests
 sonar.language=py
 sonar.python.xunit.reportPath=xunit-result.xml
-sonar.python.coverage.reportPath=coverage.xml
-sonar.links.homepage=https://github.com/eWaterCycle/parametersetdb
+sonar.python.coverage.reportPaths=coverage.xml
+sonar.links.homepage=https://github.com/eWaterCycle/ewatercycle
 sonar.sourceEncoding=UTF-8
 sonar.host.url=https://sonarcloud.io
