--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -21,7 +21,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -e .[dev]
         pip install -r requirements.txt
-    - name: Test with pytest
+    - name: Tests with coverage
       run: pytest --cov --cov-report term --cov-report xml --junitxml=xunit-result.xml
     - name: Correct coverage paths
       run: sed -i "s+$PWD/++g" coverage.xml
