--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,13 +15,17 @@ jobs:
     strategy:
       matrix:
         python-version: [3.6, 3.7, 3.8]
-
+      fail-fast: false
+    name: Linux ewatercycle conda environment ${{ matrix.python-version }}
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+    - uses: conda-incubator/setup-miniconda@v2
       with:
+        activate-environment: ewatercycle
+        environment-file: environment.yml
         python-version: ${{ matrix.python-version }}
+        miniconda-version: "latest"
+        channels: conda-forge
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
