--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,8 +27,10 @@ jobs:
         miniconda-version: "latest"
         channels: conda-forge
     - name: Install dependencies
+      shell: bash -l {0}
       run: |
         pip install -e .[dev]
         pip install -r requirements.txt
     - name: Test with pytest
       run: pytest
+      shell: bash -l {0}
