--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -13,16 +13,21 @@ jobs:
       with:
         fetch-depth: 0
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: conda-incubator/setup-miniconda@v2
       with:
+        activate-environment: ewatercycle
+        environment-file: environment.yml
         python-version: 3.8
+        miniconda-version: "latest"
+        channels: conda-forge
     - name: Install dependencies
+      shell: bash -l {0}
       run: |
-        python -m pip install --upgrade pip
         pip install -e .[dev]
         pip install -r requirements.txt
     - name: Tests with coverage
       run: pytest --cov --cov-report term --cov-report xml --junitxml=xunit-result.xml
+      shell: bash -l {0}
     - name: Correct coverage paths
       run: sed -i "s+$PWD/++g" coverage.xml
     - name: SonarCloud Scan
