--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,18 +14,23 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8]
-
+        python-version: [3.7, 3.8, 3.9]
+      fail-fast: false
+    name: Run tests in conda environment ${{ matrix.python-version }}
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+    - uses: conda-incubator/setup-miniconda@v2
       with:
+        activate-environment: ewatercycle
+        environment-file: environment.yml
         python-version: ${{ matrix.python-version }}
+        miniconda-version: "latest"
+        channels: conda-forge
     - name: Install dependencies
+      shell: bash -l {0}
       run: |
-        python -m pip install --upgrade pip
         pip install -e .[dev]
         pip install -r requirements.txt
     - name: Test with pytest
       run: pytest
+      shell: bash -l {0}
