Add mypy / pytest-mypy boilerplate

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,7 @@ source = ewatercycle
 [tool:pytest]
 testpaths = tests
 addopts =
+    --mypy
     --cov
     --cov-report xml
     --cov-report term
@@ -24,3 +25,7 @@ source-dir = docs
 build-dir = docs/_build
 all_files = 1
 builder = html
+
+[mypy]
+ignore_missing_imports = True
+files = ewatercycle, tests
