Add ewatercycle to testpaths for mypy checks

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,9 @@ branch = True
 source = ewatercycle
 
 [tool:pytest]
-testpaths = tests
+testpaths =
+    tests
+    ewatercycle
 addopts =
     --mypy
     --cov
