--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Install dependencies
       shell: bash -l {0}
       run: |
-        pip install -e .[dev]
+        pip3 install -e .[dev]
     - name: Test with pytest
       run: pytest
       shell: bash -l {0}
