Add mypy to pytest (#32)
* Add mypy / pytest-mypy boilerplate

* Fix mypy errors

* Fix type issues with config / datafiles ABCs

* Add ewatercycle to testpaths for mypy checks

* Update ewatercycle/parametersetdb/config.py

Co-authored-by: Stefan Verhoeven <s.verhoeven@esciencecenter.nl>

* Update ewatercycle/parametersetdb/config.py

Co-authored-by: Stefan Verhoeven <s.verhoeven@esciencecenter.nl>

* Revert "Fix type issues with config / datafiles ABCs"

This reverts commit 9c75e01d1d431ced539c81730320e53d45342977.

* Correct typings

* Use Dict for typing

To be Python <3.9 compatible

* Move requirments.txt content to setup.py

Co-authored-by: Stefan Verhoeven <s.verhoeven@esciencecenter.nl>
Co-authored-by: Stefan Verhoeven <stefan.verhoeven@gmail.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,8 +10,11 @@ branch = True
 source = ewatercycle
 
 [tool:pytest]
-testpaths = tests
+testpaths =
+    tests
+    ewatercycle
 addopts =
+    --mypy
     --cov
     --cov-report xml
     --cov-report term
@@ -24,3 +27,7 @@ source-dir = docs
 build-dir = docs/_build
 all_files = 1
 builder = html
+
+[mypy]
+ignore_missing_imports = True
+files = ewatercycle, tests
