--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -12,6 +12,9 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
+    - uses: eWaterCycle/setup-singularity@v6
+      with:
+        singularity-version: 3.7.1
     - name: Set up Python
       uses: conda-incubator/setup-miniconda@v2
       with:
