--- a/ewatercycle/config/ewatercycle.yaml
+++ b/ewatercycle/config/ewatercycle.yaml
@@ -3,5 +3,5 @@ grdc_location: null
 container_engine: null
 singularity_dir: null
 output_dir: null
-wflow.singularity_images: null
-wflow.docker_images: null
+wflow.singularity_image: null
+wflow.docker_image: null
