Revert "Update default config"
This reverts commit 1df7a3359e14bcc490b5b2867e03c9fbb5b4d871.

--- a/ewatercycle/config/ewatercycle.yaml
+++ b/ewatercycle/config/ewatercycle.yaml
@@ -1,7 +1,7 @@
 esmvaltool_config: null
 grdc_location: null
-container_engine: docker
-singularity_dir: './'
-output_dir: './'
-wflow.singularity_image: "./ewatercycle-wflow-grpc4bmi.sif"
-wflow.docker_image: "ewatercycle/wflow-grpc4bmi:latest"
+container_engine: null
+singularity_dir: null
+output_dir: null
+wflow.singularity_image: null
+wflow.docker_image: null
