--- a/ewatercycle/config/ewatercycle.yaml
+++ b/ewatercycle/config/ewatercycle.yaml
@@ -5,3 +5,5 @@ singularity_dir: null
 output_dir: null
 wflow.singularity_image: null
 wflow.docker_image: null
+pcrglobwb.singularity_image: null
+pcrglobwb.docker_image: null
