Add lisflood class (#40)
* a draft lisflood class

* add lisflood to models init.py

* add functions to create config files

* refactor config generators, add lisvap_run

* refactor everything

* add check_work_dir func

* Move scratch dir to global config + Move lisflood input files fields to setup argument as a dataclass

* Started on unit test against https://github.com/ec-jrc/lisflood-usecases/tree/master/LF_lat_lon_UseCase

* Parse NetCDF files + start/end from ForcingData

* Use common parent of ESMValTool data files as forcing directory

No dependency on dataset anymore

* Create dummy forcing output

* Work on lisflood test

* Use Path instead of str

* Remove 1/0

* Isort + added reindex_forcings + added forcing as dir support

* Add singularity to CI

* Dont create copies of items in CFG on module level

Hard to test with those

* Also add image to run_lisvap

* Forcing can be Path

* Setup should return workdir when it is created for you

* Use filename for lisvap config

* One work_dir to rule them all

* fix indentation in lisvap config

* fix args, return exit_code, stdout, stderr

* fix lisflood config name

* fix No such file or directory: b'/scratch/shared/ewatercycle/lisflood_20210413_134355/lisflood_ERA-Interim_Meuse_pr_1990_1990.nc.nc'

* Force midnight

* Use exec

* Make output_dir optional in reindex_forcings()

* add example lisflood notebook

* fix error in model.update by fixing the forcing data or using data from comparison

* Flatten config + fix mypy errors

* Need grpc4bmi

* add .expanduser() to forcing_dir

* remove forcing generator from the notebook

* revise docstrings and remove some of the TODO items

* don't hardcode pathroot and model_mask

* use parent dir of mask for mounting in containers

* fix a bug

* replace PathLike with Path for mask because of mypy error: PathLike does not have parent attr

* add .resolve() to forcing_dir to use absolu

--- a/ewatercycle/config/ewatercycle.yaml
+++ b/ewatercycle/config/ewatercycle.yaml
@@ -5,5 +5,7 @@ singularity_dir: null
 output_dir: null
 wflow.singularity_image: null
 wflow.docker_image: null
+lisflood.singularity_image: null
+lisflood.docker_image: null
 pcrglobwb.singularity_image: null
 pcrglobwb.docker_image: null
