--- a/ewatercycle/config/ewatercycle.yaml
+++ b/ewatercycle/config/ewatercycle.yaml
@@ -5,3 +5,25 @@ singularity_dir: null
 output_dir: null
 pcrglobwb.singularity_image: null
 pcrglobwb.docker_image: null
+parameterset_dir: null
+
+
+parameter_sets:
+  lisflood_comparison_study:
+    target_model: lisflood
+    doi: N/A
+    directory: Lisflood01degree_masked
+    config: settings_templates/settings_lisflood.xml
+    MaskMap: model_mask.nc
+
+  wflow_example_case:
+    target_model: wflow
+    doi: N/A
+    directory: wflow_example_case_nc/
+    config: wflow_example_case_nc/wflow_sbm_NC.ini
+
+  pcrglobwb_example_case:
+    target_model: pcrglobwb
+    doi: N/A
+    directory: pcrglobwb_example_case
+    config: pcrglobwb_example_case/setup.ini
