--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -2,7 +2,7 @@ name: SonarCloud analysis
 
 on:
   push:
-    branches: [master]
+    branches: [main]
   pull_request:
       types: [opened, synchronize, reopened]
 
