Use static metadata for package
Also incorperate #222

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,89 @@
 [metadata]
-description-file = README.md
+name = ewatercycle
+version = 1.0.0
+description = A Python package for running and validating a hydrology model
+author = Stefan Verhoeven
+author_email = s.verhoeven@esciencecenter.nl
+url = https://www.ewatercycle.org/
+license = Apache Software License 2.0
+keywords =
+    ewatercycle
+    FAIR
+    BMI
+    Geoscience
+classifiers =
+    Development Status :: 2 - Pre-Alpha
+    Intended Audience :: Developers
+    License :: OSI Approved :: Apache Software License
+    Natural Language :: English
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Topic :: Scientific/Engineering
+    Topic :: Scientific/Engineering :: GIS
+    Topic :: Scientific/Engineering :: Hydrology
+    Typing :: Typed
+project_urls =
+    Bug Tracker = https://github.com/eWaterCycle/ewatercycle/issues
+    Documentation = https://ewatercycle.readthedocs.io/
+    Source Code = https://github.com/eWaterCycle/ewatercycle
+install_requires =
+    basic_modeling_interface
+    cftime
+    esmvaltool>=2.3.0
+    grpc4bmi>=0.2.12,<0.3
+    hydrostats
+    matplotlib
+    numpy
+    pandas
+    pyoos
+    python-dateutil
+    ruamel.yaml
+    scipy
+    xarray
+    Fiona
+    Shapely
+    grpcio
 
-[aliases]
-# Define `python setup.py test`
-test=pytest
+[options.extras_require]
+dev =
+    # Test
+    deepdiff
+    pytest
+    pytest-cov
+    pytest-mypy
+    pytest-runner
+    types-python-dateutil
+    # Linters
+    isort
+    prospector[with_pyroma,with_mypy]
+    pycodestyle
+    yapf
+    # Dependencies for documentation generation
+    nbsphinx
+    recommonmark
+    sphinx
+    sphinx_rtd_theme
+    # ipython syntax highlighting is required in doc notebooks
+    ipython
+    # release
+    bump2version
+    build
+    twine
+
+[options]
+zip_safe = False
+python_requires = >=3.7
+packages = find:
+
+[options.package_data]
+* = *.yaml
+
+[options.packages.find]
+include =
+    ewatercycle
+    ewatercycle.*
 
 [coverage:run]
 branch = True
