Moved /ewatercycle to /src/ewatercycle + adjust config to match
Refs #228

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,7 +1,7 @@
 [bumpversion]
 current_version = 1.1.1
 
-[bumpversion:file:ewatercycle/version.py]
+[bumpversion:file:src/ewatercycle/version.py]
 search = __version__ = '{current_version}'
 replace = __version__ = '{new_version}'
 
