--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,8 @@ project_urls =
 [options]
 zip_safe = False
 python_requires = >=3.7
+package_dir =
+    = src
 packages = find:
 install_requires =
     basic_modeling_interface
@@ -83,18 +85,16 @@ dev =
 * = *.yaml
 
 [options.packages.find]
-include =
-    ewatercycle
-    ewatercycle.*
+where = src
 
 [coverage:run]
 branch = True
-source = ewatercycle
+source = src
 
 [tool:pytest]
 testpaths =
     tests
-    ewatercycle
+    src
 addopts =
     --mypy
     --cov
@@ -112,4 +112,4 @@ builder = html
 
 [mypy]
 ignore_missing_imports = True
-files = ewatercycle, tests
+files = src, tests
