--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.organization=ewatercycle
 sonar.projectKey=eWaterCycle_ewatercycle
-sonar.sources=ewatercycle/
+sonar.sources=src/
 sonar.tests=tests
 sonar.language=py
 sonar.python.xunit.reportPath=xunit-result.xml
