Add black to dev deps
Replaces yapf as formatter

--- a/setup.cfg
+++ b/setup.cfg
@@ -68,7 +68,8 @@ dev =
     isort
     prospector[with_pyroma,with_mypy]
     pycodestyle
-    yapf
+    # Formatters
+    black
     # Dependencies for documentation generation
     nbsphinx
     recommonmark
