--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,3 +7,7 @@ build-backend = "setuptools.build_meta"
 
 [tool.black]
 include = '(\.pyi?|\.ipynb)$'
+
+[tool.isort]
+profile = "black"
+multi_line_output = 3
