--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -31,6 +31,17 @@ repos:
   #   rev: '3.9.2'
   #   hooks:
   #     - id: flake8
+  #       additional_dependencies: [
+  #         flake8-annotations-complexity, flake8-cognitive-complexity,
+  #         flake8-expression-complexity,
+  #         flake8-docstrings, flake8-bugbear, flake8-eradicate,
+  #         flake8-comprehensions, flake8-executable, flake8-raise,
+  #         flake8-pathlib, flake8-pytest-style, flake8-implicit-str-concat,
+  #         flake8-variables-names, pandas-vet,
+  #         flake8-bandit, flake8-bugbear,
+
+  #       ]
+  #       args: [--docstring-convention=google]
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.910
     hooks:
@@ -48,4 +59,18 @@ repos:
         additional_dependencies: [mypy==0.910]
       # TODO renable when erros are fixed/ignored
       # - id: nbqa-flake8
-      #   additional_dependencies: [flake8==3.9.2]
+      #   additional_dependencies: [
+      #     flake8==3.9.2,
+      #     flake8-annotations-complexity, flake8-cognitive-complexity,
+      #     flake8-expression-complexity,
+      #     flake8-docstrings, flake8-bugbear, flake8-eradicate,
+      #     flake8-comprehensions, flake8-executable, flake8-raise,
+      #     flake8-pathlib, flake8-pytest-style, flake8-implicit-str-concat,
+      #     flake8-variables-names, pandas-vet,
+      #     flake8-bandit, flake8-bugbear,
+      #   ]
+      #   args: [--docstring-convention=google]
+  - repo: https://github.com/regebro/pyroma
+    rev: "3.2"
+    hooks:
+      - id: pyroma
