Make isort, pylint and flake8 compatible with black
See https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,3 +8,9 @@ build-backend = "setuptools.build_meta"
 [tool.isort]
 profile = "black"
 multi_line_output = 3
+
+[tool.pylint.messages_control]
+disable = "C0330, C0326"
+
+[tool.pylint.format]
+max-line-length = "88"
