--- a/setup.cfg
+++ b/setup.cfg
@@ -110,3 +110,7 @@ builder = html
 [mypy]
 ignore_missing_imports = True
 files = src, tests
+
+[flake8]
+max-line-length = 88
+extend-ignore = E203
