Move config from arg to file + pytest-fixture config inverted

--- a/setup.cfg
+++ b/setup.cfg
@@ -113,4 +113,5 @@ files = src, tests
 [flake8]
 max-line-length = 88
 extend-ignore = E203
-pytest-fixture-no-parentheses = False
+pytest-fixture-no-parentheses = True
+docstring-convention = google
