Ignore docstring checks in tests/ + Move google doc style to where pydocstyle expects it

--- a/setup.cfg
+++ b/setup.cfg
@@ -114,4 +114,5 @@ files = src, tests
 max-line-length = 88
 extend-ignore = E203
 pytest-fixture-no-parentheses = True
-docstring-convention = google
+per-file-ignores =
+    tests/**: S101,D100,D101,D102,D103,D104
