Fix doc generator + Fix bunch of lint warnings

--- a/setup.cfg
+++ b/setup.cfg
@@ -112,7 +112,7 @@ files = src, tests
 
 [flake8]
 max-line-length = 88
-extend-ignore = E203
+extend-ignore = E203,S101
 pytest-fixture-no-parentheses = True
 per-file-ignores =
-    tests/**: S101,D100,D101,D102,D103,D104
+    tests/**: D100,D101,D102,D103,D104
