Make flake8 just print errors instead of dying

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -67,6 +67,8 @@ repos:
             # wemake-python-styleguide,  # conflicts with black
             yesqa,
           ]
+        verbose: true
+        args: &fa [--statistics, --exit-zero]
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.910
     hooks:
@@ -85,6 +87,7 @@ repos:
       # TODO renable when erros are fixed/ignored
       - id: nbqa-flake8
         additional_dependencies: *fd
+        args: *fa
       # TODO renable when erros are fixed/ignored
       # - id: nbqa-pylint
       #   additional_dependencies: [pylint==2.9.6]
