--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -78,7 +78,7 @@ repos:
     rev: 1.1.0
     hooks:
       - id: nbqa-black
-        # Match version of black used for .py and .pynb
+        # Match version of black used for .py and .ipynb
         additional_dependencies: [black==21.7b0]
       - id: nbqa-isort
         additional_dependencies: [isort==5.9.3]
