--- a/setup.cfg
+++ b/setup.cfg
@@ -2,23 +2,20 @@
 name = ewatercycle
 version = 1.1.1
 description = A Python package for running and validating a hydrology model
-author = Stefan Verhoeven
-author_email = s.verhoeven@esciencecenter.nl
-url = https://www.ewatercycle.org/
-license = Apache Software License 2.0
 long_description = file: README.md
 long_description_content_type = text/markdown
-keywords =
-    ewatercycle
-    FAIR
-    BMI
-    Geoscience
+url = https://www.ewatercycle.org/
+author = Stefan Verhoeven
+author_email = s.verhoeven@esciencecenter.nl
+license = Apache Software License 2.0
+license_file = LICENSE
 classifiers =
     Development Status :: 2 - Pre-Alpha
     Intended Audience :: Developers
     License :: OSI Approved :: Apache Software License
     Natural Language :: English
     Programming Language :: Python :: 3
+    Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
@@ -26,22 +23,26 @@ classifiers =
     Topic :: Scientific/Engineering :: GIS
     Topic :: Scientific/Engineering :: Hydrology
     Typing :: Typed
+keywords =
+    ewatercycle
+    FAIR
+    BMI
+    Geoscience
 project_urls =
     Bug Tracker = https://github.com/eWaterCycle/ewatercycle/issues
     Documentation = https://ewatercycle.readthedocs.io/
     Source Code = https://github.com/eWaterCycle/ewatercycle
 
 [options]
-zip_safe = False
-python_requires = >=3.7
-package_dir =
-    = src
 packages = find:
 install_requires =
+    Fiona
+    Shapely
     basic_modeling_interface
     cftime
     esmvaltool>=2.3.0
     grpc4bmi>=0.2.12,<0.3
+    grpcio
     hydrostats
     matplotlib
     numpy
@@ -51,41 +52,37 @@ install_requires =
     ruamel.yaml
     scipy
     xarray
-    Fiona
-    Shapely
-    grpcio
+python_requires = >=3.7
+package_dir =
+    = src
+zip_safe = False
+
+[options.packages.find]
+where = src
 
 [options.extras_require]
 dev =
-    # Test
+    black
+    build
+    bump2version
     deepdiff
+    ipython
+    isort
+    nbsphinx
+    pre-commit
+    pycodestyle
     pytest
     pytest-cov
     pytest-mypy
     pytest-runner
-    types-python-dateutil
-    # Linters
-    isort
-    prospector[with_pyroma,with_mypy]
-    pycodestyle
-    yapf
-    # Dependencies for documentation generation
-    nbsphinx
     recommonmark
     sphinx
     sphinx_rtd_theme
-    # ipython syntax highlighting is required in doc notebooks
-    ipython
-    # release
-    bump2version
-    build
     twine
+    types-python-dateutil
 
 [options.package_data]
 * = *.yaml
-
-[options.packages.find]
-where = src
 
 [coverage:run]
 branch = True
@@ -103,7 +100,6 @@ addopts =
     --cov-report html
     --junit-xml=xunit-result.xml
 
-# Define `python setup.py build_sphinx`
 [build_sphinx]
 source-dir = docs
 build-dir = docs/_build
@@ -113,3 +109,10 @@ builder = html
 [mypy]
 ignore_missing_imports = True
 files = src, tests
+
+[flake8]
+max-line-length = 88
+extend-ignore = E203,S101
+pytest-fixture-no-parentheses = True
+per-file-ignores =
+    tests/**: D100,D101,D102,D103,D104
