--- a/setup.cfg
+++ b/setup.cfg
@@ -62,14 +62,14 @@ where = src
 
 [options.extras_require]
 dev =
-    black
+    black[jupyter]
     build
     bump2version
     deepdiff
     ipython
     isort
     nbsphinx
-    pre-commit
+    pre-commit>=2.15.0
     pycodestyle
     pytest
     pytest-cov
