Use mamba in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,7 @@ jobs:
         with:
           activate-environment: ewatercycle
           environment-file: environment.yml
+          mamba-version: "*"
           python-version: ${{ matrix.python-version }}
           miniconda-version: "latest"
           channels: conda-forge
