--- a/setup.cfg
+++ b/setup.cfg
@@ -77,6 +77,7 @@ dev =
     pytest-runner
     recommonmark
     sphinx
+    sphinx-copybutton
     sphinx_rtd_theme
     twine
     types-python-dateutil
