--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -2,13 +2,13 @@
 current_version = 1.1.1
 
 [bumpversion:file:src/ewatercycle/version.py]
-search = __version__ = '{current_version}'
-replace = __version__ = '{new_version}'
+search = __version__ = "{current_version}"
+replace = __version__ = "{new_version}"
 
 [bumpversion:file:setup.cfg]
 search = version = {current_version}
 replace = version = {new_version}
 
 [bumpversion:file:docs/conf.py]
-search = version = '{current_version}'
-replace = version = '{new_version}'
+search = version = "{current_version}"
+replace = version = "{new_version}"
