--- a/setup.cfg
+++ b/setup.cfg
@@ -40,11 +40,11 @@ install_requires =
     Shapely
     basic_modeling_interface
     cftime
-    esmvaltool>=2.3.0
+    esmvaltool>=2.4.0
     grpc4bmi>=0.2.12,<0.3
     grpcio
     hydrostats
-    matplotlib
+    matplotlib>=3.5.0
     numpy
     pandas
     pyoos
