Fix readthedocs build

--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -2,3 +2,5 @@ ipython
 nbsphinx
 ruamel.yaml
 sphinx-copybutton
+# TODO workaround till https://github.com/jupyter/nbconvert/issues/1736 is fixed
+jinja2 = "~=3.0.0"
