--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -3,4 +3,4 @@ nbsphinx
 ruamel.yaml
 sphinx-copybutton
 # TODO workaround till https://github.com/jupyter/nbconvert/issues/1736 is fixed
-jinja2 = "~=3.0.0"
+jinja2<3.1.0
