--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,7 +19,7 @@ repos:
     hooks:
       - id: setup-cfg-fmt
   - repo: https://github.com/psf/black
-    rev: 21.9b0
+    rev: "22.3.0"
     hooks:
       - id: black-jupyter
   - repo: https://github.com/PyCQA/isort
