--- a/setup.cfg
+++ b/setup.cfg
@@ -47,6 +47,7 @@ install_requires =
     matplotlib>=3.5.0
     numpy
     pandas
+    protobuf<=3.20.1
     pyoos
     python-dateutil
     ruamel.yaml
