--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,6 @@ classifiers =
     Natural Language :: English
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
-    Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Topic :: Scientific/Engineering
@@ -47,12 +46,13 @@ install_requires =
     matplotlib>=3.5.0
     numpy
     pandas
+    protobuf<=3.20.1
     pyoos
     python-dateutil
     ruamel.yaml
     scipy
     xarray
-python_requires = >=3.7
+python_requires = >=3.8
 package_dir =
     = src
 zip_safe = False
