--- a/environment.yml
+++ b/environment.yml
@@ -1,9 +1,9 @@
 ---
-name: ewatercycle39
+name: ewatercycle
 channels:
   - conda-forge
 dependencies:
-  - python==3.9
+  - python>=3.8
   - esmvaltool-python>=2.3.0
   - subversion
   # Pin esmpy so we dont get forced to run all parallel tasks on single cpu
