--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,7 +32,7 @@ repos:
   #   hooks:
   #     - id: pylint
   # TODO renable when errors are fixed/ignored
-  - repo: https://gitlab.com/pycqa/flake8
+  - repo: https://github.com/pycqa/flake8
     rev: "3.9.2"
     hooks:
       - id: flake8
