Use spdx instead of free text
Based on https://pypi.org/project/setup-cfg-fmt/

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ long_description_content_type = text/markdown
 url = https://www.ewatercycle.org/
 author = Stefan Verhoeven
 author_email = s.verhoeven@esciencecenter.nl
-license = Apache Software License 2.0
+license = Apache-2.0
 license_file = LICENSE
 classifiers =
     Development Status :: 2 - Pre-Alpha
