Use pydantic for config validation
Refs #332

--- a/setup.cfg
+++ b/setup.cfg
@@ -47,6 +47,7 @@ install_requires =
     numpy
     pandas
     protobuf<=3.20.1
+    pydantic
     pyoos
     python-dateutil
     ruamel.yaml
@@ -83,7 +84,6 @@ dev =
     types-python-dateutil
 
 [options.package_data]
-* = *.yaml
 ewatercycle = py.typed
 
 [coverage:run]
