--- a/environment.yml
+++ b/environment.yml
@@ -3,7 +3,7 @@ name: ewatercycle
 channels:
   - conda-forge
 dependencies:
-  - python>=3.8
+  - python>=3.8,<3.11
   - esmvaltool-python>=2.3.0
   - subversion
   # Pin esmpy so we dont get forced to run all parallel tasks on single cpu
