Register models as plugins

--- a/setup.cfg
+++ b/setup.cfg
@@ -57,6 +57,15 @@ package_dir =
     = src
 zip_safe = False
 
+[options.entry_points]
+ewatercycle.models =
+    Hype = ewatercycle.models.hype:Hype
+    Lisflood = ewatercycle.models.lisflood:Lisflood
+    Wflow = ewatercycle.models.wflow:Wflow
+    PCRGlobWB = ewatercycle.models.pcrglobwb:PCRGlobWB
+    MarrmotM01 = ewatercycle.models.marrmot:MarrmotM01
+    MarrmotM14 = ewatercycle.models.marrmot:MarrmotM14
+
 [options.packages.find]
 where = src
 
