--- a/setup.cfg
+++ b/setup.cfg
@@ -38,8 +38,9 @@ install_requires =
     Fiona
     Shapely
     basic_modeling_interface
+    bmipy
     cftime
-    esmvaltool>=2.4.0
+    esmvalcore
     grpc4bmi>=0.2.12,<0.3
     grpcio
     hydrostats
