Remember py3.11 is not supported due to mamba

--- a/environment.yml
+++ b/environment.yml
@@ -3,6 +3,7 @@ name: ewatercycle
 channels:
   - conda-forge
 dependencies:
+  # Numba 0.56.4 does not support Python 3.11 so set upper limit
   - python>=3.8,<3.11
   - esmvaltool-python>=2.3.0
   - subversion
