Use latest grpc4bmi

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,7 +40,7 @@ install_requires =
     basic_modeling_interface
     cftime
     esmvaltool>=2.4.0
-    grpc4bmi>=0.2.12,<0.3
+    grpc4bmi>=0.3
     grpcio
     hydrostats
     matplotlib>=3.5.0
