Revert "reduce dependencies"
This reverts commit a8ec12e478eeb5c80b99a47cebc7b7aa613c74cd.

--- a/setup.cfg
+++ b/setup.cfg
@@ -38,9 +38,8 @@ install_requires =
     Fiona
     Shapely
     basic_modeling_interface
-    bmipy
     cftime
-    esmvalcore
+    esmvaltool>=2.4.0
     grpc4bmi>=0.2.12,<0.3
     grpcio
     hydrostats
