--- a/environment.yml
+++ b/environment.yml
@@ -4,4 +4,9 @@ channels:
   - conda-forge
 dependencies:
   - python>=3.8,<3.11
+  - esmvaltool-python>=2.3.0
   - subversion
+  # Pin esmpy so we dont get forced to run all parallel tasks on single cpu
+  # Can be removed once
+  # https://github.com/ESMValGroup/ESMValCore/issues/1208 is resolved.
+  - esmpy!=8.1.0
