Also use plugins for forcing

--- a/setup.cfg
+++ b/setup.cfg
@@ -62,6 +62,12 @@ zip_safe = False
 where = src
 
 [options.entry_points]
+ewatercycle.forcing =
+    hype = ewatercycle.plugins.hype.forcing:HypeForcing
+    lisflood = ewatercycle.plugins.lisflood.forcing:LisfloodForcing
+    wflow = ewatercycle.plugins.wflow.forcing:WflowForcing
+    pcrglobwb = ewatercycle.plugins.pcrglobwb.forcing:PCRGlobWBForcing
+    marrmot = ewatercycle.plugins.marrmot.forcing:MarrmotForcing
 ewatercycle.models =
     Hype = ewatercycle.plugins.hype.hype:Hype
     Lisflood = ewatercycle.plugins.lisflood.lisflood:Lisflood
