Install pydantic in mypy precommit hook
Otherwise get:
setup.cfg:121: error: Error importing plugin "pydantic.mypy": No module named 'pydantic'

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -73,7 +73,7 @@ repos:
     rev: v0.910
     hooks:
       - id: mypy
-        additional_dependencies: [types-python-dateutil]
+        additional_dependencies: [types-python-dateutil, pydantic]
   - repo: https://github.com/nbQA-dev/nbQA
     rev: 1.1.0
     hooks:
