--- a/setup.cfg
+++ b/setup.cfg
@@ -40,7 +40,7 @@ install_requires =
     bmipy
     cftime
     esmvaltool>=2.4.0
-    grpc4bmi@git+https://github.com/eWaterCycle/grpc4bmi@bmi2
+    grpc4bmi>=0.4.0
     grpcio
     hydrostats
     matplotlib>=3.5.0
@@ -58,6 +58,9 @@ package_dir =
     = src
 zip_safe = False
 
+[options.packages.find]
+where = src
+
 [options.entry_points]
 ewatercycle.models =
     Hype = ewatercycle.models.hype:Hype
@@ -66,9 +69,6 @@ ewatercycle.models =
     PCRGlobWB = ewatercycle.models.pcrglobwb:PCRGlobWB
     MarrmotM01 = ewatercycle.models.marrmot:MarrmotM01
     MarrmotM14 = ewatercycle.models.marrmot:MarrmotM14
-
-[options.packages.find]
-where = src
 
 [options.extras_require]
 dev =
