--- a/setup.cfg
+++ b/setup.cfg
@@ -37,16 +37,16 @@ packages = find:
 install_requires =
     Fiona
     Shapely
-    basic_modeling_interface
+    bmipy
     cftime
     esmvaltool>=2.4.0
-    grpc4bmi>=0.2.12,<0.3
+    grpc4bmi>=0.4.0
     grpcio
     hydrostats
     matplotlib>=3.5.0
     numpy
     pandas
-    protobuf<=3.20.1
+    pydantic
     pyoos
     python-dateutil
     ruamel.yaml
@@ -59,6 +59,15 @@ zip_safe = False
 
 [options.packages.find]
 where = src
+
+[options.entry_points]
+ewatercycle.models =
+    Hype = ewatercycle.models.hype:Hype
+    Lisflood = ewatercycle.models.lisflood:Lisflood
+    Wflow = ewatercycle.models.wflow:Wflow
+    PCRGlobWB = ewatercycle.models.pcrglobwb:PCRGlobWB
+    MarrmotM01 = ewatercycle.models.marrmot:MarrmotM01
+    MarrmotM14 = ewatercycle.models.marrmot:MarrmotM14
 
 [options.extras_require]
 dev =
@@ -83,7 +92,6 @@ dev =
     types-python-dateutil
 
 [options.package_data]
-* = *.yaml
 ewatercycle = py.typed
 
 [coverage:run]
@@ -109,6 +117,7 @@ all_files = 1
 builder = html
 
 [mypy]
+plugins = pydantic.mypy
 ignore_missing_imports = True
 files = src, tests
 
