--- a/environment.yml
+++ b/environment.yml
@@ -3,7 +3,8 @@ name: ewatercycle
 channels:
   - conda-forge
 dependencies:
-  - python>=3.8
+  # Numba 0.56.4 does not support Python 3.11 so set upper limit
+  - python>=3.8,<3.11
   - esmvaltool-python>=2.3.0
   - subversion
   # Pin esmpy so we dont get forced to run all parallel tasks on single cpu
