Annotated for py3.8

--- a/setup.cfg
+++ b/setup.cfg
@@ -51,6 +51,7 @@ install_requires =
     python-dateutil
     ruamel.yaml
     scipy
+    typing_extensions
     xarray
 python_requires = >=3.8
 package_dir =
