--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ author_email = s.verhoeven@esciencecenter.nl
 license = Apache-2.0
 license_file = LICENSE
 classifiers =
-    Development Status :: 2 - Pre-Alpha
+    Development Status :: 5 - Production/Stable
     Intended Audience :: Developers
     License :: OSI Approved :: Apache Software License
     Natural Language :: English
