Replace forcing classes with pydantic (#346)
* Replace forcing classes with pydantic

TODO make pydantic work with load() and save() to/from yaml files.

* load/save of default forcing class

* Make hype forcing work with pydantic

* Make mypy and pydantic happy

* Add test for hype legacy forcing

* Fix load and save for new forcing objects

* Add test for legacy forcing (lisflood)

* MarrmotForcing pydantic compatible

* pcrglobwb pydanticified

* pydantified wflow forcing

* Fix test

* Annotated for py3.8

* Housekeeping

* Remove print

* Add #346 to changelog

---------

Co-authored-by: Peter Kalverla <peter.kalverla@gmx.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ author_email = s.verhoeven@esciencecenter.nl
 license = Apache-2.0
 license_file = LICENSE
 classifiers =
-    Development Status :: 2 - Pre-Alpha
+    Development Status :: 5 - Production/Stable
     Intended Audience :: Developers
     License :: OSI Approved :: Apache Software License
     Natural Language :: English
@@ -51,6 +51,7 @@ install_requires =
     python-dateutil
     ruamel.yaml
     scipy
+    typing_extensions
     xarray
 python_requires = >=3.8
 package_dir =
@@ -82,7 +83,6 @@ dev =
     pycodestyle
     pytest
     pytest-cov
-    pytest-mypy
     pytest-runner
     recommonmark
     sphinx
@@ -102,13 +102,6 @@ source = src
 testpaths =
     tests
     src
-addopts =
-    --mypy
-    --cov
-    --cov-report xml
-    --cov-report term
-    --cov-report html
-    --junit-xml=xunit-result.xml
 
 [build_sphinx]
 source-dir = docs
