--- a/setup.cfg
+++ b/setup.cfg
@@ -92,7 +92,9 @@ dev =
     types-python-dateutil
 
 [options.package_data]
-ewatercycle = py.typed
+ewatercycle =
+    py.typed
+    testing/data/Rhine/Rhine.*
 
 [coverage:run]
 branch = True
