Use entry points for forcings + require python >=3.10

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,8 +16,8 @@ classifiers =
     Natural Language :: English
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
-    Programming Language :: Python :: 3.8
-    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
     Topic :: Scientific/Engineering
     Topic :: Scientific/Engineering :: GIS
     Topic :: Scientific/Engineering :: Hydrology
@@ -69,6 +69,12 @@ ewatercycle.models =
     PCRGlobWB = ewatercycle.plugins.pcrglobwb.model:PCRGlobWB
     MarrmotM01 = ewatercycle.plugins.marrmot.model:MarrmotM01
     MarrmotM14 = ewatercycle.plugins.marrmot.model:MarrmotM14
+ewatercycle.forcings =
+    HypeForcing = ewatercycle.plugins.hype.forcing:HypeForcing
+    LisfloodForcing = ewatercycle.plugins.lisflood.forcing:LisfloodForcing
+    MarrmotForcing = ewatercycle.plugins.marrmot.forcing:MarrmotForcing
+    PCRGlobWBForcing = ewatercycle.plugins.pcrglobwb.forcing:PCRGlobWBForcing
+    WflowForcing = ewatercycle.plugins.wflow.forcing:WflowForcing
 
 [options.extras_require]
 dev =
