Use SomethingDownloader to download example parameter set

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,7 @@ install_requires =
     bmipy
     cftime
     esmvaltool>=2.4.0
+    gitdir
     grpc4bmi>=0.4.0
     grpcio
     hydrostats
@@ -74,6 +75,10 @@ ewatercycle.forcings =
     MarrmotForcing = ewatercycle.plugins.marrmot.forcing:MarrmotForcing
     PCRGlobWBForcing = ewatercycle.plugins.pcrglobwb.forcing:PCRGlobWBForcing
     WflowForcing = ewatercycle.plugins.wflow.forcing:WflowForcing
+ewatercycle.example_parameter_set = 
+    lisflood_fraser = ewatercycle.plugins.lisflood.example_parameterset:lisflood_fraser
+    pcrglobwb_rhinemeuse_30min = ewatercycle.plugins.pcrglobwb.example_parameterset:pcrglobwb_rhinemeuse_30min
+    wflow = ewatercycle.plugins.wflow:example_parameterset
 
 [options.extras_require]
 dev =
@@ -94,6 +99,7 @@ dev =
     sphinx-copybutton
     sphinx_rtd_theme
     twine
+    mypy
     types-python-dateutil
 
 [options.package_data]
