Change python versions to strings in CI workflows

--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -19,7 +19,7 @@ jobs:
           activate-environment: ewatercycle
           environment-file: environment.yml
           mamba-version: "*"
-          python-version: 3.10
+          python-version: "3.10"
           miniconda-version: "latest"
           channels: conda-forge
       - name: Install dependencies
