--- a/setup.cfg
+++ b/setup.cfg
@@ -52,7 +52,7 @@ install_requires =
     ruamel.yaml
     scipy
     xarray
-python_requires = >=3.10
+python_requires = ">=3.10"
 package_dir =
     = src
 zip_safe = False
@@ -61,6 +61,12 @@ zip_safe = False
 where = src
 
 [options.entry_points]
+ewatercycle.forcings =
+    HypeForcing = ewatercycle.plugins.hype.forcing:HypeForcing
+    LisfloodForcing = ewatercycle.plugins.lisflood.forcing:LisfloodForcing
+    MarrmotForcing = ewatercycle.plugins.marrmot.forcing:MarrmotForcing
+    PCRGlobWBForcing = ewatercycle.plugins.pcrglobwb.forcing:PCRGlobWBForcing
+    WflowForcing = ewatercycle.plugins.wflow.forcing:WflowForcing
 ewatercycle.models =
     Hype = ewatercycle.plugins.hype.model:Hype
     Lisflood = ewatercycle.plugins.lisflood.model:Lisflood
@@ -68,13 +74,7 @@ ewatercycle.models =
     PCRGlobWB = ewatercycle.plugins.pcrglobwb.model:PCRGlobWB
     MarrmotM01 = ewatercycle.plugins.marrmot.model:MarrmotM01
     MarrmotM14 = ewatercycle.plugins.marrmot.model:MarrmotM14
-ewatercycle.forcings =
-    HypeForcing = ewatercycle.plugins.hype.forcing:HypeForcing
-    LisfloodForcing = ewatercycle.plugins.lisflood.forcing:LisfloodForcing
-    MarrmotForcing = ewatercycle.plugins.marrmot.forcing:MarrmotForcing
-    PCRGlobWBForcing = ewatercycle.plugins.pcrglobwb.forcing:PCRGlobWBForcing
-    WflowForcing = ewatercycle.plugins.wflow.forcing:WflowForcing
-ewatercycle.parameter_sets = 
+ewatercycle.parameter_sets =
     lisflood_fraser = ewatercycle.plugins.lisflood.parameter_sets:lisflood_fraser
     pcrglobwb_rhinemeuse_30min = ewatercycle.plugins.pcrglobwb.parameter_sets:pcrglobwb_rhinemeuse_30min
     wflow_rhine_sbm_nc = ewatercycle.plugins.wflow.parameter_sets:wflow_rhine_sbm_nc
@@ -87,6 +87,7 @@ dev =
     deepdiff
     ipython
     isort
+    mypy
     nbsphinx
     pre-commit>=2.15.0
     pycodestyle
@@ -98,7 +99,6 @@ dev =
     sphinx-copybutton
     sphinx_rtd_theme
     twine
-    mypy
     types-python-dateutil
 
 [options.package_data]
