--- a/setup.cfg
+++ b/setup.cfg
@@ -52,7 +52,7 @@ install_requires =
     ruamel.yaml
     scipy
     xarray
-python_requires = ">=3.10"
+python_requires = >=3.10
 package_dir =
     = src
 zip_safe = False
@@ -97,7 +97,7 @@ dev =
     recommonmark
     sphinx
     sphinx-copybutton
-    sphinx_rtd_theme
+    sphinx-rtd-theme
     twine
     types-python-dateutil
 
