--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -4,3 +4,4 @@ ruamel.yaml
 sphinx-copybutton
 # TODO workaround till https://github.com/jupyter/nbconvert/issues/1736 is fixed
 jinja2<3.1.0
+pydantic
