--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -2,6 +2,4 @@ ipython
 nbsphinx
 ruamel.yaml
 sphinx-copybutton
-# TODO workaround till https://github.com/jupyter/nbconvert/issues/1736 is fixed
-jinja2<3.1.0
-pydantic
+jinja2
